--- a/khan-exercises/exercises/multiplying_expressions_1.html
+++ b/khan-exercises/exercises/multiplying_expressions_1.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math math-format expressions">
 <head>
     <meta charset="UTF-8" />
-    <title>Multiplying expressions 1</title>
+    <title>Veeltermen vermenigvuldigen 1</title>
     <script src="../khan-exercise.js"></script>
     <script type="text/javascript">
         function mult() {
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div class="exercise">
-        <p class="summary" data-tt="question1">This exercise covers simplifying expressions of the form 
+        <p class="summary" data-tt="question1"> Deze oefening gaat over het vereenvoudigen van de vorm:
         (Ax + B)(Cx + D)</p>
 
         <div class="vars">
