--- a/khan-exercises/exercises/optellen_gelijkwaardige_breuken.html
+++ b/khan-exercises/exercises/optellen_gelijkwaardige_breuken.html
@@ -33,7 +33,7 @@
                 piechart( [ N2, D - N2 ], ["#e00", "#999"], 2 );
             </div>
         </div>
-        <p>Add the numerators.</p>
+        <p>Tel de tellers bij elkaar op.</p>
         <div class="graphie">
             init({ range: [ [-3, 3], [-3, 3] ], scale: 25 });
             piechart( [ N1+N2, D - N2 - N1], ["#e00", "#999"], 2 );
