--- a/khan-exercises/exercises/logarithms_1.html
+++ b/khan-exercises/exercises/logarithms_1.html
@@ -37,16 +37,16 @@
             <div>
                 <p class="question"><code>\log_{<var>base</var>}<var>number</var> = {?}</code></p>
                 <p class="solution"><var>answer</var></p>
+                <div class="hints">
+                    <p data-tt="hint1">If <code>\log_{b}x=y</code>, then <code>b^y=x</code>.</p>
+                    <p data-tt="hint2">First, try to write <code><var>number</var></code>, the number we are taking the logarithm of, as a power of <code><var>base</var></code>, the base of the logarithm.</p>
+                    <p data-tt="hint3"><code><var>number</var></code> can be expressed as <code><var>power_string</var></code>.</p>
+                    <p data-tt="hint4"><code><var>number</var></code> can be expressed as <code><var>base</var>^<var>answer</var></code>.</p>
+                    <p><code><var>base</var>^<var>answer</var>=<var>number</var></code>, dus <code>\log_{<var>base</var>}<var>number</var>=<var>answer</var></code>.</p>
+                </div>
             </div>
         </div>
 
-        <div class="hints">
-            <p data-tt="question1">If <code>\log_{b}x=y</code>, then <code>b^y=x</code>.</p>
-            <p data-tt="question2">First, try to write <code><var>number</var></code>, the number we are taking the logarithm of, as a power of <code><var>base</var></code>, the base of the logarithm.</p>
-            <p data-tt="question3"><code><var>number</var></code> can be expressed as <code><var>power_string</var></code>.</p>
-            <p data-tt="question4"><code><var>number</var></code> can be expressed as <code><var>base</var>^<var>answer</var></code>.</p>
-            <p><code><var>base</var>^<var>answer</var>=<var>number</var></code>, dus <code>\log_{<var>base</var>}<var>number</var>=<var>answer</var></code>.</p>
-        </div>
     </div>
 </body>
 </html>
