--- a/khan-exercises/exercises/absolute_value_of_complex_numbers.html
+++ b/khan-exercises/exercises/absolute_value_of_complex_numbers.html
@@ -49,7 +49,7 @@
 						} );
 					</div>
 					<p>
-						<code><var>REPRESENTATION</var></code> is hierboven getekend als een <strong class="hint_blue">blauwe</strong> cirkel.
+						<code><var>REPRESENTATION</var></code> is hierboven weergegeven met de <strong class="hint_blue">blauwe</strong> punt.
 					</p>
 				</div>
 				<div>
