--- a/khan-exercises/exercises/recognizing_conic_sections.html
+++ b/khan-exercises/exercises/recognizing_conic_sections.html
@@ -19,7 +19,7 @@
                     </div>
 
                     <div class="problem">
-                        <p data-tt="question1">Identify this conic section.</p>
+                        <p data-tt="question1">Wat is dit voor een kromme?</p>
 
                         <div class="graphie" id="conic">
                             graphInit({
@@ -39,15 +39,15 @@
 
                     <div class="solution" data-tt="question6">Parabola</div>
                     <ul class="choices" data-category="true">
-                        <li data-tt="question2">Parabola</li>
-                        <li data-tt="question3">Hyperbola</li>
-                        <li data-tt="question4">Circle</li>
-                        <li data-tt="question5">Ellipse</li>
+                        <li data-tt="question2">Parabool</li>
+                        <li data-tt="question3">Hyperbool</li>
+                        <li data-tt="question4">Cirkel</li>
+                        <li data-tt="question5">Ellips</li>
                     </ul>
 
                     <div class="hints">
-                        <p data-tt="hint1">This graph has a vertex and is U-shaped. It extends to infinity on both ends.</p>
-                        <p data-tt="hint2">That describes a <em>parabola</em>.</p>
+                        <p data-tt="hint1">De grafiek heeft een top en heeft een U-vorm. Aan beide zijden loopt hij oneindig door.</p>
+                        <p data-tt="hint2">Dat is de beschrijving van een <em>parabool</em>.</p>
                     </div>
                 </div>
 
@@ -69,11 +69,11 @@
                         </div>
                     </div>
 
-                    <div class="solution" data-tt="question7">Ellipse</div>
+                    <div class="solution" data-tt="question7">Ellips</div>
 
                     <div class="hints">
-                        <p data-tt="hint3">You can see that the graph resembles a squished circle.</p>
-                        <p data-tt="hint4">This shape is an <em>ellipse</em>.</p>
+                        <p data-tt="hint3">Je kunt zien dat deze grafiek op een afgeplatte cirkel lijkt.</p>
+                        <p data-tt="hint4">Deze grafiek is een <em>ellips</em>.</p>
                     </div>
                 </div>
 
@@ -86,8 +86,8 @@
                     <div class="solution" data-tt="question8">Circle</div>
 
                     <div class="hints">
-                        <p data-tt="hint5">This shape is perfectly round and symmetrical. All the points on it are equidistant from its center.</p>
-                        <p data-tt="hint6">A <em>circle</em> has those properties.</p>
+                        <p data-tt="hint5">De grafiek is perfect rond en symmetrisch. Alle punten hebben dezelfde afstand tot het middelpunt.</p>
+                        <p data-tt="hint6">Een <em>cirkel</em> heeft deze eigenschappen.</p>
                     </div>
                 </div>
 
@@ -111,17 +111,17 @@
                         </div>
                     </div>
 
-                    <div class="solution" data-tt="question9">Hyperbola</div>
+                    <div class="solution" data-tt="question9">Hyperbool</div>
 
                     <div class="hints">
                         <div>
-                            <p data-tt="hint7">This graph has two asymptotes which it approaches. It's also U-shaped on each side.</p>
+                            <p data-tt="hint7">Deze grafiek nadert de twee assen. Het is ook een U-vorm aan beide kanten.</p>
                             <div class="graphie" data-update="conic">
                                 plot( function( x ) { return (B/A) * x; }, [-10, 10], { stroke: "gray" } );
                                 plot( function( x ) { return (B/A) * -1 * x; }, [-10, 10], { stroke: "gray" } );
                             </div>
                         </div>
-                        <p data-tt="hint8">This conic section is therefore a <em>hyperbola</em>.</p>
+                        <p data-tt="hint8">Deze kromme is daarom een <em>hyperbool</em>.</p>
                     </div>
                 </div>
             </div>
