--- a/khan-exercises/exercises/fraction_word_problems_1.html
+++ b/khan-exercises/exercises/fraction_word_problems_1.html
@@ -1,6 +1,3 @@
-
-
-
 <!DOCTYPE html>
 <html data-translatable data-require="math graphie graphie-helpers word-problems">
 <head>
@@ -110,7 +107,7 @@
                 <p class="solution" data-type="rational" data-simplify="optional"><var>LEFT / TOTAL</var></p>
                 <div class="hints">
                     <p data-tt="hint6">If <var>plural( A, "slice" )</var> represent<var>A &gt; 1 ? "" : "s"</var> <code>\dfrac{<var>A</var>}{<var>TOTAL</var>}</code> of the <var>pizza( 1 )</var>, there must have been a total of <var>TOTAL</var> slices.</p>
-                    <p><code>\text{fraction of <var>pizza( 1 )</var> remaining} = \dfrac{\text{number of slices remaining}}{\text{number slices total}}</code></p>
+                    <p><code>\text{gedeelte van <var>pizza( 1 )</var> wat overblijft} = \dfrac{\text{aantal overgebleven stukken}}{\text{totaal aantal stukken}}</code></p>
                     <div>
                         <p data-tt="hint12">Together they ate <var>A + B</var> slices, which leaves <var>LEFT</var> out of <var>TOTAL</var> slices remaining.</p>
                         <div class="graphie">
