--- a/khan-exercises/exercises/least_common_multiple_and_greatest_common_divisor_word_problems.html
+++ b/khan-exercises/exercises/least_common_multiple_and_greatest_common_divisor_word_problems.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math word-problems spin">
 <head>
     <meta charset="UTF-8" />
-    <title>Least common multiple and greatest common divisor word problems</title>
+    <title>Redactiesommen kleinste gemene veelvoud en grootste gemene deler</title>
     <script src="../khan-exercise.js"></script>
     <style>
         .gcd-column {
