--- a/khan-exercises/exercises/inverse_trig_functions.html
+++ b/khan-exercises/exercises/inverse_trig_functions.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math math-format graphie expressions">
 <head>
     <meta charset="UTF-8" />
-    <title>Inverse trigonometrische functies</title>
+    <title>Inverse goniometrische functies</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
@@ -73,7 +73,7 @@
             <div>
                 <div class="question">
                     <p data-tt="question2">Wat is de werkelijke waarde van <code><var>FN_TEX( PRETTY( X ) )</var></code>?</p>
-                    <p data-tt="question3">Opmerking: Geeft het antwoord in <span data-if="GRADEN">graden (bijvoorbeeld: 180 graden&quot;)</span><span data-else>radialen (bijvoorbeeld: &quot;3/4 pi&quot;)</span>.</p>
+                    <p data-tt="question3">Opmerking: Geeft het antwoord in <span data-if="GRADEN">graden (bijvoorbeeld: 180 graden)</span><span data-else>radialen (bijvoorbeeld: &quot;3/4 pi&quot;)</span>.</p>
                 </div>
 
                 <div data-if="GRADEN"><p class="solution" data-type="regex"><var>Y_GRADEN_REGEX</var></p></div>
