--- a/khan-exercises/exercises/supplementary_angles.html
+++ b/khan-exercises/exercises/supplementary_angles.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math graphie math-format">
 <head>
     <meta charset="UTF-8" />
-    <title>Supplementary angles</title>
+    <title>Supplementaire hoeken</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
@@ -24,7 +24,7 @@
             </div>
 
             <div class="question">
-                <p data-tt="question1">If <code>m \angle <var>A + O + C</var> = 180^\circ</code> and <code>m <var>ANGLE_ONE</var> = <var>ANGLE</var>^\circ</code>, what is <code>m <var>ANGLE_TWO</var></code>, in degrees?</p>
+                <p data-tt="question1">Als <code>m \angle <var>A + O + C</var> = 180^\circ</code> en<code>m <var>ANGLE_ONE</var> = <var>ANGLE</var>^\circ</code>, hoe groot is dan <code>m <var>ANGLE_TWO</var></code>, in graden?</p>
 
                 <div class="graphie">
                     init({
@@ -58,9 +58,9 @@
             <div class="solution" data-forms="integer"><var>180 - ANGLE</var></div>
 
             <div class="hints">
-                <p data-tt="hint1">From the diagram, we see that <code><var>ANGLE_BOT</var></code> and <code><var>ANGLE_TOP</var></code> are supplementary angles.</p>
-                <p data-tt="hint2">Therefore, <code>m <var>ANGLE_BOT</var> + m <var>ANGLE_TOP</var> = 180^\circ</code>.</p>
-                <p data-tt="hint3">Thus, <code>m <var>ANGLE_TWO</var> = 180^\circ - m <var>ANGLE_ONE</var> = 180^\circ - <var>ANGLE</var>^\circ = <var>180 - ANGLE</var>^\circ</code>.</p>
+                <p data-tt="hint1">Inde figuur zien we dat <code><var>ANGLE_BOT</var></code> en <code><var>ANGLE_TOP</var></code> supplementaire hoeken zijn.</p>
+                <p data-tt="hint2">Daarom, <code>m <var>ANGLE_BOT</var> + m <var>ANGLE_TOP</var> = 180^\circ</code>.</p>
+                <p data-tt="hint3">Dus, <code>m <var>ANGLE_TWO</var> = 180^\circ - m <var>ANGLE_ONE</var> = 180^\circ - <var>ANGLE</var>^\circ = <var>180 - ANGLE</var>^\circ</code>.</p>
             </div>
         </div>
     </div>
