--- a/khan-exercises/exercises/angles_2.html
+++ b/khan-exercises/exercises/angles_2.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math graphie">
 <head>
     <meta charset="UTF-8" />
-    <title>Angles 2</title>
+    <title>Hoeken 2</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
@@ -26,13 +26,13 @@
                 </div>
 
                 <div class="question">
-                    <p data-tt="question1">Given the following:</p>
+                    <p data-tt="question1">Gegeven:</p>
                     <ul>
                         <li><code>\color{green}{\angle{ABC}} = <var>Tri_Y</var>&deg;</code></li>
                         <li><code>\color{purple}{\angle{BAC}} = <var>Tri_Z</var>&deg;</code></li>
                         <li><code>\overline{DE} \parallel \overline{BC}</code></li>
                     </ul>
-                    <p data-tt="question2">What is <code>\color{blue}{\angle{<var>RAND_SWITCH2 === 0 ? "DAF" : "CAE"</var>}} {?}</code></p>
+                    <p data-tt="question2">Hoe groot is <code>\color{blue}{\angle{<var>RAND_SWITCH2 === 0 ? "DAF" : "CAE"</var>}} {?}</code></p>
                 </div>
 
                 <div class="problem">
@@ -96,7 +96,7 @@
                         }
                     </div>
 
-                    <p data-tt="note1" style="font-size:70%; color:grey"><strong>NOTE:</strong> Angles not drawn to scale.</p>
+                    <p data-tt="note1" style="font-size:70%; color:grey"><strong>Opmerking:</strong> de hoeken zijn niet op schaal getekend.</p>
 
                 </div> <!-- end problem block -->
 
@@ -399,7 +399,7 @@
                             \color{purple}{\angle{BHD}} =
                             180&deg; - \color{green}{\angle{BDC}} - \color{orange}{\angle{DBE}} =
                             <var>Tri1_Z</var>&deg;.
-                        </code> This is because the interior angles of a triangle add up to 180&deg;.
+                        </code> Dit is omdat de hoeken op 1 lijn samen 180&deg; zijn.
                         <span class="graphie" data-update="star1">
                             // label angle BHD
                             arc([3.2, 1.3], .75, 118, 220, { stroke: "purple" });
@@ -567,7 +567,7 @@
                     <p data-tt="hint16" data-if="RAND_SWITCH2==0">
                         <code>\color{teal}{\angle{DJI}} = 180&deg; - \color{green}{\angle{BDC}} -
                             \color{purple}{\angle{DIJ}}</code>.
-                        We know this because the sum of angles inside a triangle add up to 180&deg;.
+                        We weten dit omdat de som van de hoeken binnen een driehoek 180&deg; is.
                         <span class="graphie" data-update="star2">
                             // label angle JID
                             arc([-3.2, 1.3], .75, 260, 320, { stroke: "teal" });
