--- a/khan-exercises/exercises/angles_of_a_polygon.html
+++ b/khan-exercises/exercises/angles_of_a_polygon.html
@@ -27,7 +27,7 @@
                 CLONE = graph.polygon.clone();
             </div>
             <div class="solution" data-type="multiple">
-                <span class="sol"><var>ANSWER</var></span> degrees
+                <span class="sol"><var>ANSWER</var></span> graden
             </div>
             <div class="hints">
                 <p data-tt="hint1" >There are a couple ways to approach this problem.</p>
@@ -45,7 +45,7 @@
 
                 <div>
                     <p data-tt="hint5" >An alternative approach is shown below.</p>
-                    <p data-tt="hint6" >We can use four of the <var>cardinal( SIDES )</var> sides to make 2 triangles, as shown in orange.</p>
+                    <p data-tt="hint6" >We can use four of the <var>SIDES</var> sides to make 2 triangles, as shown in orange.</p>
                     <div class="graphie" data-id="other">
                         init({
                              range: [ [ -5, 5 ], [ -1, 5 ] ]
