--- a/khan-exercises/exercises/same_side_exterior_angles.html
+++ b/khan-exercises/exercises/same_side_exterior_angles.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math graphie graphie-helpers angles">
 <head>
     <meta charset="UTF-8" />
-    <title>Same side exterior angles</title>
+    <title>Buitenhoeken</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
@@ -15,8 +15,8 @@
 
     <div class="problems">
         <div>
-            <p data-tt="question1">The two horizontal lines are parallel, and there is a third line that intersects them as shown below.</p>
-            <p class="question" data-tt="question2">If we know that the <span class="hint_blue">blue angle is <var>MEASURE</var> degrees</span>, what is the <span class="hint_orange">measure of the orange angle</span>?</p>
+            <p data-tt="question1">De twee horizontale lijnen zijn evenwijdig, er er is een derde lijn die ze kruist zoals hieronder te zien is.</p>
+            <p class="question" data-tt="question2">Als we weten dat de <span class="hint_blue">blauwe hoek <var>MEASURE</var> graden is</span>, hoe groot is dan de <span class="hint_orange">hoek</span>?</p>
             <p class="solution" data-forms="integer"><var>180 - MEASURE</var></p>
             <div class="graphie" id="parallel-lines">
                 init({
@@ -33,20 +33,20 @@
 
     <div class="hints">
             <div>
-                <p data-tt="hint1">The pink angles are adjacent to the blue angle and form a straight line, so we know that they measure <var>180 - MEASURE</var> degrees.</p>
+                <p data-tt="hint1">De roze hoeken zijn supplementaire hoeken van de blauwe hoek, dus weten we dat zij <var>180 - MEASURE</var> graden zijn.</p>
                 <div class="graphie" data-update="parallel-lines">
                     graph.pl.drawAdjacentAngles( KNOWN_INDEX, true, "#FF00A5" );
                 </div>
             </div>
-            <p data-tt="hint2">It makes sense that the pink angles are equal because they are opposite each other.</p>
-            <p data-tt="hint3">One of the pink angles corresponds with the orange angle, and the other pink angle forms an alternate exterior angle.</p>
+            <p data-tt="hint2">Het is duidelijk dat de roze hoeken gelijk zijn want het zijn overstaande hoeken.</p>
+            <p data-tt="hint3">Een van de roze hoeken komt overeen met de oranje hoek, de andere roze hoek is een overstaande buitenhoek.</p>
             <div>
-                <p data-tt="hint4">The orange angle equals the pink angles and measures <var>180 - MEASURE</var> degrees.</p>
+                <p data-tt="hint4">De oranje hoek is gelijk aan de roze hoek en is <var>180 - MEASURE</var> graden.</p>
                 <div class="graphie" data-update="parallel-lines">
                     graph.pl.drawAngle( UNKNOWN_INDEX, true, "#FFA500" );
                 </div>
             </div>
-            <p data-tt="hint5">Note that the blue and orange angles are supplementary.</p>
+            <p data-tt="hint5">Zie dat de blauwe en oranje hoek samen 180 graden zijn.</p>
         </div>
     </div>
     </div>
