--- a/khan-exercises/exercises/same_side_exterior_angles_2.html
+++ b/khan-exercises/exercises/same_side_exterior_angles_2.html
@@ -2,7 +2,7 @@
 <html data-require="math graphie graphie-helpers angles">
 <head>
     <meta charset="UTF-8" />
-    <title>Same side exterior angles 2</title>
+    <title>Buitenhoeken aan dezelfde zijde 2</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
@@ -22,8 +22,8 @@
 
     <div class="problems">
         <div>
-            <p>The two horizontal lines are parallel, and there is a third line that intersects them as shown below.</p>
-            <p class="question">Solve for <code>x</code>:</p>
+            <p>De twee horizontale lijnen zijn evenwijdig en er is een derde lijn die ze snijdt zoals hieronder getoond.</p>
+            <p class="question">Los <code>x</code> op:</p>
             <p class="solution"><var>SOLUTION</var></p>
             <div class="graphie" id="parallel-lines">
 
@@ -45,38 +45,38 @@
 
     <div class="hints">
         <div>
-            <p>The pink angles are adjacent to the blue angle and form a straight line, so we know that:</p>
+            <p>De roze hoeken liggen naast de blauwe en vormen een rechte lijn, dus weten we dat:</p>
             <p><code>\color{<var>BLUE</var>}{<var>A</var>x + <var>B</var>} + \color{<var>PINK</var>}{y} = 180</code></p>
-            <p>The pink angles equal each other because they are <code>\color{<var>GREEN</var>}{\text{vertical angles}}</code>.</p>
+            <p>De roze hoeken zijn aan elkaar gelijk want het zijn <code>\color{<var>GREEN</var>}{\text{overstaande hoeken}}</code>.</p>
             <div class="graphie" data-update="parallel-lines">
                 graph.pl.drawAdjacentAngles( KNOWN_INDEX, "y^\\circ", "#FF00A5" );
             </div>
         </div>
         <div>
-            <p>One of the pink angles <code>\color{<var>GREEN</var>}{corresponds}</code> with the orange angle, and the other pink angle forms an <code>\color{<var>GREEN</var>}{\text{alternate interior angle}}</code>. Therefore, the orange angle measure equals the pink angle measure.</p>
+            <p>Een van de roze hoeken <code>\color{<var>GREEN</var>}{komt overeen}</code> met de oranje hoek, en de andere roze hoek vormt een <code>\color{<var>GREEN</var>}{\text{wisselende binnenhoek}}</code>. Daarom is de oranje hoek gelijk aan de roze hoek.</p>
             <p><code>\color{<var>PINK</var>}{y} = \color{<var>ORANGE</var>}{<var>C</var>x + <var>D</var>}</code></p>
         </div>
         <div>
-            <p>Substitute <code>\color{<var>ORANGE</var>}{<var>C</var>x + <var>D</var>}</code> for <code>\color{<var>PINK</var>}{y}</code> in our first equation.</p>
+            <p>Vervang <code>\color{<var>ORANGE</var>}{<var>C</var>x + <var>D</var>}</code> voor<code>\color{<var>PINK</var>}{y}</code> in de eerste vergelijking.</p>
             <p><code>\color{<var>BLUE</var>}{<var>A</var>x + <var>B</var>} + \color{<var>ORANGE</var>}{<var>C</var>x + <var>D</var>} = 180</code></p>
         </div>
         <div>
-            <p>Combine like terms.</p>
+            <p>Combineer gelijke termen.</p>
             <p><code><var>A + C</var>x + <var>B + D</var> = 180</code></p>
         </div>
         <div>
-            <p><var>B + D > 0 ? "Subtract" : "Add"</var> <code>\color{<var>PINK</var>}{<var>abs(B + D)</var>}</code> <var>B + D > 0 ? "from" : "to"</var> both sides.</p>
+            <p><var>B + D > 0 ? "Min" : "Plus"</var> <code>\color{<var>PINK</var>}{<var>abs(B + D)</var>}</code> <var>B + D > 0 ? "" : ""</var> aan beide kanten.</p>
             <p><code>(<var>A + C</var>x + <var>B + D</var>) \color{<var>PINK</var>}{+ <var>-(B + D)</var>} = 180 \color{<var>PINK</var>}{+ <var>-(B + D)</var>}</code></p>
             <p><code><var>A + C</var>x = <var>180 - B - D</var></code></p>
         </div>
         <div>
-        <p>Divide by <code>\color{<var>PINK</var>}{<var>A + C</var>}</code>.</p>
+        <p>Delen door <code>\color{<var>PINK</var>}{<var>A + C</var>}</code>.</p>
         <p><code>\dfrac{<var>A + C</var>x}{\color{<var>PINK</var>}{<var>A + C</var>}} = \dfrac{<var>180 - B - D</var>}{\color{<var>PINK</var>}{<var>A + C</var>}}</code></p>
         </div>
         <div>
-        <p>Simplify.</p>
+        <p>Vereenvoudig.</p>
         <p><code>x = <var>(180 - B - D) / (A + C)</var></code></p>
-        <p>Note that the blue and orange angles are <code>\color{<var>GREEN</var>}{supplementary}</code>.</p>
+        <p>Merk op dat de blauwe en oranje hoeken <code>\color{<var>GREEN</var>}{supplementair}</code> zijn.</p>
         </div>
     </div>
     </div>
