--- a/khan-exercises/exercises/parallel_lines_1.html
+++ b/khan-exercises/exercises/parallel_lines_1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta charset="UTF-8" />
-    <title>Parallel lines 1</title>
+    <title>Evenwijdige lijnen 1</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
