--- a/khan-exercises/exercises/corresponding_angles.html
+++ b/khan-exercises/exercises/corresponding_angles.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math graphie graphie-helpers angles">
 <head>
     <meta charset="UTF-8" />
-    <title>Corresponding angles</title>
+    <title>F-hoeken</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
@@ -16,8 +16,8 @@
 
     <div class="problems">
         <div>
-            <p data-tt="question1">The two horizontal lines are parallel, and there is a third line that intersects them as shown below.</p>
-            <p class="question" data-tt="question2">If we know that the <span class="hint_blue">blue angle is <var>MEASURE</var> degrees</span>, what is the <span class="hint_orange">measure of the orange angle</span>?</p>
+            <p data-tt="question1">De twee horizontale lijnen zijn evenwijdig. De derde doorkruist ze zoals onderstaand te zien is.</p>
+            <p class="question" data-tt="question2">Als we weten dat de <span class="hint_blue">blauwe hoek <var>MEASURE</var> graden is</span>, hoe groot is dan de <span class="hint_orange">oranje hoek</span>?</p>
             <p class="solution" data-forms="integer"><var>MEASURE</var></p>
             <div class="graphie" id="parallel-lines">
                 init({
@@ -33,11 +33,11 @@
     </div>
 
     <div class="hints">
-        <p data-tt="hint1">Notice that the blue and orange angles are in the same position but at different intersections.</p>
-        <p data-tt="hint2">One way to describe the angles is to say that they are corresponding angles.</p>
-        <p data-tt="hint3">There is a proof for why corresponding angles are equal, but for now let's just take that on faith.</p>
+        <p data-tt="hint1">Merk op dat de blauwe en oranje hoeken in dezelfde positie staan, maar op verschillende snijpunten.</p>
+        <p data-tt="hint2">Een manier om deze hoeken te beschrijven is te zeggen dat het overeenkomstige hoeken zijn.</p>
+        <p data-tt="hint3">Er is een bewijs voor dat overeenkomstige hoeken gelijk zijn, maar voor nu nemen we dat gewoon aan.</p>
         <div>
-            <p data-tt="hint4">The orange angle measures <var>MEASURE</var> degrees.</p>
+            <p data-tt="hint4">De oranje hoek is <var>MEASURE</var> graden.</p>
             <div class="graphie" data-update="parallel-lines">
                 graph.pl.drawAngle( UNKNOWN_INDEX, true, "#FFA500" );
             </div>
