--- a/khan-exercises/exercises/same_side_interior_angles.html
+++ b/khan-exercises/exercises/same_side_interior_angles.html
@@ -16,7 +16,7 @@
     <div class="problems">
         <div>
             <p data-tt="question1">De twee horizontale lijnen zijn evenwijdig, en er is een derde lijn die hen snijdt, zoals hieronder getoond.</p>
-            <p class="question" data-tt="question2">Als we weten dat de <span class="hint_blue"> blauwe hoek <var>MEASURE</var> graden is</span>, hoe groot is dan de <span class="hint_orange">oranje hoek?</span>?</p>
+            <p class="question" data-tt="question2">Als we weten dat de <span class="hint_blue"> blauwe hoek </span><var>MEASURE</var> graden is, hoe groot is dan de <span class="hint_orange">oranje hoek</span>?</p>
             <p class="solution" data-forms="integer"> <var>180 - MEASURE</var></p>
             <div class="graphie" id="parallel-lines">
                 init({
