--- a/khan-exercises/exercises/complementary_and_supplementary_angles.html
+++ b/khan-exercises/exercises/complementary_and_supplementary_angles.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>Complementary and supplementary angles</title>
+    <title>Complementaire en supplementaire hoeken</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
