--- a/khan-exercises/exercises/angle_types.html
+++ b/khan-exercises/exercises/angle_types.html
@@ -25,7 +25,7 @@
             </div>
 
             <div class="question">
-                <p data-tt="question1">Is the shown angle acute, right, or obtuse?</p>
+                <p data-tt="question1">Is de getoonde hoek scherp, recht of stomp?</p>
 
                 <div class="graphie" id="angle">
 
