--- a/khan-exercises/exercises/divisibility_tests.html
+++ b/khan-exercises/exercises/divisibility_tests.html
@@ -80,7 +80,7 @@
                         als de som van zijn cijfers deelbaar is door
                         <code><var>FACTOR</var></code>.
                         [<a href="#" class="show-subhint"
-                        data-subhint="explain-three">Why?</a>]
+                        data-subhint="explain-three">Waarom?</a>]
                     </p>
                     <div class="subhint" id="explain-three">
                         <p>
@@ -192,7 +192,7 @@
                         Een getal is deelbaar door <code>4</code> als de 
                         laatste twee cijfers ook deelbaar zijn door <code>4</code>.
                         [<a href="#" class="show-subhint"
-                        data-subhint="explain-four">Why?</a>]
+                        data-subhint="explain-four">Waarom?</a>]
                     </p>
                     <div class="subhint" id="explain-four">
                         <p>
